; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/engine/graph/extr_nve0.c_nve0_graph_init_rop.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/engine/graph/extr_nve0.c_nve0_graph_init_rop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvc0_graph_priv = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nvc0_graph_priv*)* @nve0_graph_init_rop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nve0_graph_init_rop(%struct.nvc0_graph_priv* %0) #0 {
  %2 = alloca %struct.nvc0_graph_priv*, align 8
  %3 = alloca i32, align 4
  store %struct.nvc0_graph_priv* %0, %struct.nvc0_graph_priv** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %27, %1
  %5 = load i32, i32* %3, align 4
  %6 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %7 = getelementptr inbounds %struct.nvc0_graph_priv, %struct.nvc0_graph_priv* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp slt i32 %5, %8
  br i1 %9, label %10, label %30

10:                                               ; preds = %4
  %11 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @ROP_UNIT(i32 %12, i32 324)
  %14 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %11, i32 %13, i32 -1073741824)
  %15 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @ROP_UNIT(i32 %16, i32 112)
  %18 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %15, i32 %17, i32 -1073741824)
  %19 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %20 = load i32, i32* %3, align 4
  %21 = call i32 @ROP_UNIT(i32 %20, i32 516)
  %22 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %19, i32 %21, i32 -1)
  %23 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %24 = load i32, i32* %3, align 4
  %25 = call i32 @ROP_UNIT(i32 %24, i32 520)
  %26 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %23, i32 %25, i32 -1)
  br label %27

27:                                               ; preds = %10
  %28 = load i32, i32* %3, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %3, align 4
  br label %4

30:                                               ; preds = %4
  ret void
}

declare dso_local i32 @nv_wr32(%struct.nvc0_graph_priv*, i32, i32) #1

declare dso_local i32 @ROP_UNIT(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
